scripts/nullness/annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8.txt
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/main/BlogDemoMain.java:37: error: [dereference.of.nullable] dereference of possibly-null reference searchedAuthor
		Post post = new Post("My First Post", "This is awesome. I am loving it", new Date(), searchedAuthor.getId(), tagList);
		                                                                                     ^
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/factory/MongoDBFactory.java:35: error: [return] incompatible types in return.
		return mongoDBFactory;
		       ^
  type of expression: @Initialized @Nullable MongoDBFactory
  method return type: @Initialized @NonNull MongoDBFactory
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostCommentsDAOImpl.java:30: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(PostComments.DB_AUTHOR, comments.getAuthor());
		                                                       ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostCommentsDAOImpl.java:31: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(PostComments.DB_MAILADD, comments.getMailAdd());
		                                                         ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostCommentsDAOImpl.java:32: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(PostComments.DB_CREATED, comments.getCreated());
		                                                         ^
  found   : @Initialized @Nullable Date
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostCommentsDAOImpl.java:33: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(PostComments.DB_POST, comments.getPostId());
		                                                     ^
  found   : @Initialized @Nullable ObjectId
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostCommentsDAOImpl.java:34: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(PostComments.DB_COMMENT, comments.getComment());
		                                                         ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostCommentsDAOImpl.java:42: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(PostComments.DB_POST, post.getId());
		                                             ^
  found   : @Initialized @Nullable ObjectId
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/AuthorDAOImpl.java:25: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Author.DB_FIRST_NAME, author.getFirstName());
		                                                      ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/AuthorDAOImpl.java:26: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Author.DB_LAST_NAME, author.getLastName());
		                                                    ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/AuthorDAOImpl.java:27: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Author.DB_MAIL, author.getMailAdd());
		                                              ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/AuthorDAOImpl.java:28: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Author.DB_ABOUT_ME, author.getAboutMe());
		                                                  ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:30: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Post.DB_TITLE, post.getTitle());
		                                         ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:31: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Post.DB_TEXT, post.getText());
		                                       ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:32: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Post.DB_CREATED, post.getCreated());
		                                             ^
  found   : @Initialized @Nullable Date
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:33: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Post.DB_AUTHORID, post.getAuthorId());
		                                               ^
  found   : @Initialized @Nullable ObjectId
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:34: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Post.DB_TAG, post.getTags());
		                                      ^
  found   : @Initialized @Nullable List<@Initialized @NonNull String>
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:47: error: [return] incompatible types in return.
		return post;
		       ^
  type of expression: @Initialized @Nullable Post
  method return type: @Initialized @NonNull Post
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:54: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Post.DB_AUTHORID, authorId);
		                               ^
  found   : @Initialized @Nullable ObjectId
  required: @Initialized @NonNull Object
../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:67: error: [argument] incompatible argument for parameter arg1 of BSONObject.put.
		dbObject.put(Post.DB_AUTHORID, authorId);
		                               ^
  found   : @Initialized @Nullable ObjectId
  required: @Initialized @NonNull Object
Note: ../annotator/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
20 errors
